--- a/src/main/java/r12/webpages/AuthorPage.html
+++ b/src/main/java/r12/webpages/AuthorPage.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:wicket="http://wicket.apache.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
 </head>
 <body>
 
+	<div class="container">
+		<div class="row">
+			<form wicket:id="form_Insert_Author" class="form-group">
+				<div>
+					<span wicket:id="name_Author_Label" class="form-control">[name_Author_Label]</span>
+					<input wicket:id="name_Author" type="text" class="form-control"></input> 
+					<span wicket:id="date_OfBirth_Label" class="form-control">[date_OfBirth_Label]</span>
+					<input wicket:id="date_OfBirth" type="text" class="form-control"></input>
+					
+					<input type="submit" class="btn btn-primary">
+				</div>
+			</form>
+			
+			<div class="alert-info" wicket:id="feedbackMessage">[feedbackMessage]</div>
+			
+		</div>
+	</div>
 </body>
 </html>
