--- a/src/main/java/r12/webpages/BooksPage.html
+++ b/src/main/java/r12/webpages/BooksPage.html
@@ -6,13 +6,13 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<form wicket:id="form_Insert_Books" class="form-group">
+			<form wicket:id="formInsertBooks" class="form-group">
 				<div>
-					<span wicket:id="title_Label" class="form-control">[title_Label]</span>
+					<span wicket:id="titleLabel" class="form-control">[title_Label]</span>
 					<input wicket:id="title" type="text" class="form-control"></input> 
-					<span wicket:id="isbn_Label" class="form-control">[isbn_Label]</span>
+					<span wicket:id="isbnLabel" class="form-control">[isbn_Label]</span>
 					<input wicket:id="isbn" type="text" class="form-control"></input>
-					<span wicket:id="idAuthor_Label" class="form-control">[idAuthor_Label]</span>
+					<span wicket:id="idAuthorLabel" class="form-control">[idAuthor_Label]</span>
 					<input wicket:id="idAuthor" type="text" class="form-control"></input>
 					
 					<input type="submit" class="btn btn-primary">
